--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+cyassl (2.7.0-2) precise; urgency=low
+
+  * Disable fastmath and add back any arch
+
+ -- Endre Karlson <endre.karlson@hp.com>  Thu, 30 Aug 2013 17:50:05 +0000
+
 cyassl (2.7.0-1) precise; urgency=low
 
   * Initial release
